--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pg": "6.x",
     "ejs": "2.5.6",
     "express": "4.15.2",
-    "cool-ascii-faces": "1.3.4"
+    "cool-ascii-faces": "1.3.4",
+    "body-parser": "^1.15.0"
   },
   "repository": {
     "type": "git",
